Add Activity and Intent solution

--- a/Exercise_Intent_Solution/app/build.gradle
+++ b/Exercise_Intent_Solution/app/build.gradle
@@ -4,9 +4,8 @@ android {
     compileSdkVersion 26
     buildToolsVersion '28.0.3'
 
-
     defaultConfig {
-        applicationId "ch.paixon.exercise_activity"
+        applicationId "ch.paixon.exercise_intent_solution"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -17,10 +16,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
