--- a/Exercise_Activity_Solution/app/build.gradle
+++ b/Exercise_Activity_Solution/app/build.gradle
@@ -4,9 +4,8 @@ android {
     compileSdkVersion 26
     buildToolsVersion '28.0.3'
 
-
     defaultConfig {
-        applicationId "ch.paixon.exercise_activity"
+        applicationId "ch.paixon.exercise_activity_solution"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -25,7 +24,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:26.1.0'
 }
